Hero zone complete. Other zones completed to Best Selling Styles.

--- a/src/css/components/common/mixins.styl
+++ b/src/css/components/common/mixins.styl
@@ -1,2 +1,8 @@
 type_default()
     font-family: 'Archivo', sans-serif;
+
+bgimage_default(image,size)
+    background-image url(image)
+    background-repeat no-repeat
+    background-size size
+    background-position top left
